[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/Score/Score.gd" type="Script" id=1]
[ext_resource path="res://ui/Score/ScoreItem.tscn" type="PackedScene" id=2]

[node name="Score" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )
visible = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -472.0
margin_top = -344.0
margin_right = 472.0
margin_bottom = 344.0
rect_min_size = Vector2( 800, 600 )

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 944.0
margin_bottom = 688.0

[node name="Title" type="Label" parent="MarginContainer/Panel"]
anchor_right = 1.0
margin_bottom = 50.0
text = "Score"
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 50.0
margin_right = -20.0
margin_bottom = -120.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer"]
margin_right = 904.0
margin_bottom = 518.0

[node name="PlayerScore" type="HBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_right = 904.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="CurrentScore" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PlayerScore" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 0.0
margin_right = 446.0
margin_bottom = 50.0
size_flags_horizontal = 3
title = "This Game"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PlayerScore"]
margin_left = 450.0
margin_right = 454.0
margin_bottom = 50.0

[node name="BestScore" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/PlayerScore" instance=ExtResource( 2 )]
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 458.0
margin_top = 0.0
margin_right = 904.0
margin_bottom = 50.0
size_flags_horizontal = 3
title = "Your best Game"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 904.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 30 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 904.0
margin_bottom = 518.0
size_flags_vertical = 3

[node name="BestScores" type="ScrollContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer"]
margin_right = 904.0
margin_bottom = 430.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ScoreList" type="VBoxContainer" parent="MarginContainer/Panel/MarginContainer/VBoxContainer/MarginContainer/BestScores"]
margin_right = 904.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="Container" type="Container" parent="MarginContainer/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0

[node name="Username" type="LineEdit" parent="MarginContainer/Panel/Container"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 13.0
margin_top = -15.0
margin_right = 163.0
margin_bottom = 23.0
text = "Username"

[node name="ShareButton" type="Button" parent="MarginContainer/Panel/Container"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 190.0
margin_top = -68.0
margin_right = 321.0
margin_bottom = -22.0
text = "Share my Score"

[node name="NextButton" type="Button" parent="MarginContainer/Panel/Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -127.0
margin_top = -22.0
margin_right = -30.0
margin_bottom = 24.0
text = "Next"

[node name="RetryButton" type="Button" parent="MarginContainer/Panel/Container"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -241.0
margin_top = -22.0
margin_right = -144.0
margin_bottom = 24.0
text = "Retry"

[node name="HTTPRequestScoreList" type="HTTPRequest" parent="."]

[node name="HTTPRequestPushScore" type="HTTPRequest" parent="."]

[connection signal="pressed" from="MarginContainer/Panel/Container/ShareButton" to="." method="_on_ShareButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/Container/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MarginContainer/Panel/Container/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="request_completed" from="HTTPRequestScoreList" to="." method="_on_HTTPRequestScoreList_request_completed"]
[connection signal="request_completed" from="HTTPRequestPushScore" to="." method="_on_HTTPRequestPushScore_request_completed"]
